Se agregaron componentes de footer, blog widget y header. Tambien se agregaron paginas y se completaron las paginas de home, blog y perfil

--- a/src/app/pages/blogs/blogs.component.html
+++ b/src/app/pages/blogs/blogs.component.html
@@ -1,1 +1,151 @@
-<p>blogs works!</p>
+<app-header></app-header>
+
+<div class="blogbanner">
+  <h1 class="bannertext">The Blog!</h1>
+</div>
+
+
+<div class="blogmeat m-5">
+  <div class="card m-5" style="max-width: 100vw">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img
+          src="assets/blog/hamburguesa.png"
+          class="img-fluid rounded-start"
+          alt="..."
+        />
+      </div>
+      <div class="col-md-8">
+        <h5 id="hamburguesa" class="card-title m-3">GANADOR DE LA MEJOR HAMBURGUESA DE BOGOTÁ</h5>
+        <p class="card-text m-3">
+            Hace apenas una semana, llegó a su emocionante conclusión el aclamado evento anual conocido como Burger Master 2023. Durante varias semanas, los amantes de las hamburguesas se deleitaron con una competencia culinaria sin precedentes, en la cual los establecimientos más destacados del país se enfrentaron para obtener el codiciado título de la mejor preparación de esta adorada comida rápida. <br>
+
+            En cada ciudad participante, la competencia se desarrolló con gran intensidad. Los restaurantes más populares presentaron sus creaciones más ingeniosas y deliciosas, sorprendiendo a los jurados con combinaciones audaces de ingredientes, desde sabrosas salsas caseras hasta fusiones exóticas de carne y vegetales. Los clientes, ansiosos por probar y calificar las diferentes hamburguesas, se unieron a la fiebre de Burger Master, explorando una amplia gama de opciones que deleitaban sus paladares y desafiaban sus expectativas. Al final, solo unos pocos afortunados fueron coronados como los campeones, asegurándose un lugar especial en el corazón de los amantes de las hamburguesas en todo el país y dejando a todos con grandes expectativas para el próximo Burger Master.
+        </p>
+        <p class="card-text m-3">
+          
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="card m-5" style="max-width: 100vw">
+    <div class="row g-0">
+      <div class="col-md-8">
+        <h5 id="laboratorio" class="card-title m-3">DEL LABORATORIO A TU PLATO</h5>
+        <p class="card-text m-3">
+            En la vibrante ciudad de Bogotá, los restaurantes que se aventuran a explorar la cocina molecular son una verdadera joya culinaria. Estos establecimientos vanguardistas, como Criterion, Cadaqués y El Cielo, han adquirido renombre por su enfoque innovador y creativo en la gastronomía. Con platos que integran conceptos gastronómicos técnicos y utilizan ingredientes sorprendentes, ofrecen una experiencia única para los paladares más exigentes. <br>
+            Sin duda, el punto culminante de la escena culinaria de Bogotá es El Cielo, el único restaurante en el país con una codiciada estrella Michelin. Aquí, los platos son verdaderas obras maestras de la cocina molecular. Los comensales son seducidos por la interacción de ingredientes inusuales y técnicas de vanguardia. El equipo de El Cielo despliega su creatividad al máximo, sorprendiendo con humos, espumas y aromas cautivadores, creando una experiencia gastronómica que despierta todos los sentidos.<br>
+            En definitiva, los restaurantes de cocina molecular en Bogotá representan una fusión perfecta entre arte, ciencia y gastronomía. Son lugares donde la innovación y la experimentación convergen para crear experiencias culinarias únicas y memorables, dejando a los comensales con una profunda apreciación por la creatividad y la excelencia gastronómica.
+        </p>
+        <p class="card-text m-3">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
+      <div class="col-md-4">
+        <img
+          src="assets/blog/molecular.jpg"
+          class="img-fluid rounded-start"
+          alt="..."
+        />
+      </div>
+    </div>
+  </div>
+
+  <div class="card m-5" style="max-width: 100vw">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img
+          src="assets/blog/comidatipica.jpg"
+          class="img-fluid rounded-start"
+          alt="..."
+        />
+      </div>
+      <div class="col-md-8">
+        <h5 id="criolla" class="card-title m-3">LA COMIDA CRIOLLA ¿VA PARA AFUERA?</h5>
+        <p class="card-text m-3">
+            Pese a la llegada masiva de otras cocinas internacionales, la comida típica colombiana se mantiene como un verdadero tesoro culinario que perdura en el corazón de los comensales. Las ventas de platos tradicionales han experimentado un crecimiento impresionante en los últimos años, demostrando que el aprecio por la autenticidad y la herencia gastronómica colombiana está en constante ascenso.<br>
+
+            Desde las montañas andinas hasta las costas caribeñas, cada región de Colombia se enorgullece de sus propias especialidades culinarias. Las arepas, deliciosos panecillos de maíz rellenos de queso o carne, son un ícono indiscutible de la comida típica colombiana que ha conquistado el paladar de locales y turistas por igual. Además, los famosos platos como el ajiaco santafereño, una sopa abundante con pollo, papas y maíz, o el delicioso sancocho, una sabrosa sopa de carne con plátano, yuca y verduras, son auténticas joyas culinarias que evocan los sabores y aromas de la tradición colombiana.
+        </p>
+        <p class="card-text m-3">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="card m-5" style="max-width: 100vw">
+    <div class="row g-0">
+      <div class="col-md-8">
+        <h5 id="birria" class="card-title m-3">PIZZA DE BIRRIA: NUESTRA NUEVA OBSESIÓN</h5>
+        <p class="card-text m-3">
+            La fiebre mundial por la birria ha alcanzado proporciones épicas, y no es de extrañar que haya sido el término más buscado en la lista de "El año en búsquedas 2021" con la frase "birria tacos". Este platillo ha capturado el corazón y el paladar de los amantes de la comida en todo el mundo, y su versatilidad ha dado lugar a diversas interpretaciones culinarias. Desde las populares "quesabirrias" -quesadillas rellenas de birria-, hasta los innovadores "birriamen" -ramen con carne de birria-, y los irresistibles "nachibirria" -nachos con carne de birria-, el universo de la birria no deja de sorprender. <br>
+            En medio de esta locura gastronómica, las "pizabirrias" han ganado un lugar destacado en el corazón de los comensales. La combinación perfecta de una deliciosa pizza con el sabor único de la birria ha conquistado los paladares más exigentes. En Bogotá, esta tendencia culinaria ha encontrado su hogar, donde los amantes de la birria pueden deleitarse con estas irresistibles "pizabirrias". Ya sea con una base de masa tradicional o una opción más innovadora, la fusión de sabores y texturas hace de cada bocado una experiencia memorable. <br>
+            La llegada de las "pizabirrias" a Bogotá ha causado sensación entre los comensales de la ciudad, quienes se han entregado a la pasión por este manjar fusionado. Los restaurantes y food trucks se han sumado a esta tendencia, ofreciendo una amplia variedad de opciones y combinaciones creativas para satisfacer los antojos de birria y pizza. Esta deliciosa combinación es el resultado de la pasión y la inventiva culinaria, y demuestra que la birria sigue evolucionando y sorprendiendo a los paladares más exigentes en todo el mundo, incluyendo la vibrante ciudad de Bogotá.
+        </p>
+        <p class="card-text m-3">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
+      <div class="col-md-4">
+        <img
+          src="assets/blogplug/Birriapizza.jpg"
+          class="img-fluid rounded-start"
+          alt="..."
+        />
+      </div>
+    </div>
+  </div>
+
+  <div class="card m-5" style="max-width: 100vw">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img
+          src="assets/blog/comidaperuana.jpg"
+          class="img-fluid rounded-start"
+          alt="..."
+        />
+      </div>
+      <div class="col-md-8">
+        <h5 id="peruanos" class="card-title m-3">TOP 5 RESTAURANTES PERUANOS EN BOGOTÁ</h5>
+        <p class="card-text m-3">
+
+            En los últimos cinco años, Colombia se ha convertido en un destino atractivo para los inversionistas peruanos del sector gastronómico. Tanto a través del modelo de franquicias como mediante la apertura de restaurantes de comida peruana, como UMA, La Lucha Sanguchería, Central Cevichería y otros, los empresarios peruanos han encontrado un mercado prometedor en tierras colombianas.<br>
+
+            La consejera económica comercial de Perú en Bogotá, Soledad Campos, destacó en una entrevista con Gestión que esta tendencia es un reflejo del creciente interés de los colombianos por la rica y variada cocina peruana. Actualmente, se estima que existen 109 restaurantes de comida peruana en el país, lo que demuestra la demanda y el éxito que han experimentado estos establecimientos.<br>
+            
+            El fenómeno de la gastronomía peruana en Colombia ha sido impulsado por la reconocida calidad y autenticidad de los platos peruanos, así como por la capacidad de los inversionistas peruanos para adaptarse a las preferencias del mercado local. Estos restaurantes ofrecen una amplia gama de sabores tradicionales, desde ceviches frescos hasta deliciosos sánguches, y han logrado conquistar el paladar de los colombianos, convirtiéndose en destinos populares para los amantes de la cocina peruana.
+        </p>
+        <p class="card-text m-3">
+          <small class="text-body-secondary">Last updated 3 mins ago</small>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="card m-5" style="max-width: 100vw">
+    <div class="row g-0">
+      <div class="col-md-8">
+        <h5 id="arte" class="card-title m-3">EL ARTE DE LA PRESENTACIÓN</h5>
+        <p class="card-text m-3">
+            La presentación de un platillo juega un papel fundamental en la experiencia gastronómica, ya que va más allá de ser simplemente estética. De hecho, la importancia de la presentación radica en su capacidad para estimular los sentidos y preparar al cuerpo para disfrutar de la comida. <br>
+
+            Cuando se ve un plato visualmente atractivo y bien presentado, se desencadenan respuestas fisiológicas en el organismo. El cerebro interpreta la información visual del platillo y envía señales a través de las neuronas, lo que estimula la secreción de saliva y jugo gástrico. Esta reacción refleja la preparación del sistema digestivo para recibir y digerir los alimentos. <br>
+            
+            La presentación cuidadosa de un platillo puede despertar el apetito y generar anticipación en los comensales. Los colores vibrantes, la disposición ordenada de los ingredientes, las texturas contrastantes y los detalles creativos contribuyen a despertar el interés y la curiosidad por probar el plato. Además, una presentación visualmente atractiva también puede influir en la percepción del sabor, ya que los ojos pueden predisponer al paladar a recibir y apreciar los sabores de una manera más intensa.
+        </p>
+
+      </div>
+      <div class="col-md-4">
+        <img
+          src="assets/blog/presentacion.jpg"
+          class="img-fluid rounded-start"
+          alt="..."
+        />
+      </div>
+    </div>
+  </div>
+</div>
+
+<app-footer></app-footer>
