--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,108 @@
-<p>login works!</p>
+<!-- <img class="wave" src="">
+	<div class="container">
+		<div class="img">
+			<img src="">
+		</div>
+		<div class="login-content">
+			<form action="index.html">
+				<img src="img/avatar.svg">
+				<h2 class="title">Welcome</h2>
+           		<div class="input-div one">
+           		   <div class="i">
+           		   		<i class="fas fa-user"></i>
+           		   </div>
+           		   <div class="div">
+           		   		<h5>Username</h5>
+           		   		<input type="text" class="input">
+           		   </div>
+           		</div>
+           		<div class="input-div pass">
+           		   <div class="i"> 
+           		    	<i class="fas fa-lock"></i>
+           		   </div>
+           		   <div class="div">
+           		    	<h5>Password</h5>
+           		    	<input type="password" class="input">
+            	   </div>
+            	</div>
+            	<a href="#">Forgot Password?</a>
+            	<input type="submit" class="btn" value="Login"> 
+                <button type="button" class="btn btn-outline-danger" >Danger</button>
+            </form>
+        </div>
+    </div> -->
+    <!-- <div class="login-box">
+        <div class="login-header">
+            <header><img src="../imagenes/logo.jpg" alt=""></header>
+        </div>
+        <div class="input-box">
+            <input type="text" class="input-field" placeholder="Email"  required>
+        </div>
+        <div class="input-box">
+            <input type="password" class="input-field" placeholder="Password" required>
+        </div>
+        <div class="forgot">
+            <section>
+                <input type="checkbox" id="check">
+                <label for="check">Remember me</label>
+            </section>
+            <section>
+                <a href="#">Forgot password</a>
+            </section>
+        </div>
+        <div class="input-submit">
+            <button class="submit-btn" id="submit"></button>
+            <label for="submit">Sign In</label>
+        </div>
+        <div class="sign-up-link">
+            <p>Don't have account? <a href="#">Sign Up</a></p>
+        </div>
+    </div> -->
+    <div class="header">
+        <div class="logo">
+            <a href="#">
+                <img src="assets/img/netflixlogo.png" alt="">
+            </a>
+        </div>
+    </div>
+
+    <div class="login-container">
+        <div class="login_box">
+            <h2 class="titulo">Drop Door </h2>
+        <div class="imputs"> 
+            <form>
+                <form class="form">
+                    <input type="text" required>
+                    <label class="lbl-nombre">
+                        <span class="text-nomb">Email</span>
+                    </label>
+                    
+                </form>
+                <form class="form">
+                    <input type="text" required>
+                    <label class="lbl-nombre">
+                        <span class="text-nomb">Password</span>
+                    </label>
+                    
+                </form>
+
+
+                <input type="submit" class="btn" value="Login">
+            </form>
+        </div>
+            <div class="demas">
+                <div class="creacion">
+                    <p> <a href="#">crear cuenta</a></p>
+                <!-- </div>
+                <p>-------------------O-------------------</p>
+                <div class="login_footer">
+                <div class="login_facebook">
+                    <span><img height="20px" src="" alt="facebook"></span>
+                    <span><a href="#">Conectar com Facebook</a></span>
+                </div> -->
+            </div> 
+            </div>
+
+          
+        </div>
+    </div>
