se agregan componentes y servicios para conectar e imprimir items de la base de datos

--- a/src/app/components/blogwidget/blogwidget.component.html
+++ b/src/app/components/blogwidget/blogwidget.component.html
@@ -24,7 +24,7 @@
                                         <a href="../blog/#laboratorio">Del laboratorio a tu plato: La revolución de la cocina molecular </a>
                                     </h4>
                             <p class="card-description">Técnicas innovadoras que desafían los límites tradicionales de la cocina y brindan experiencias sensoriales únicas. </p>
-                            <div class="ftr text-center"> <a href="#" class="btn btn-white btn-round">Leer Más</a> </div>
+                            <div class="ftr text-center"> <a href="../blog/#laboratorio" class="btn btn-white btn-round">Leer Más</a> </div>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                                         <a href="../blog/#arte">El arte de la presentación: Cómo la estética influye en la experiencia gastronómica moderna</a>
                                     </h4>
                             <p class="card-description"> Desde la disposición artística de los ingredientes hasta la elección de vajillas y decoraciones</p>
-                            <div class="ftr text-center"> <a href="#" class="btn btn-white btn-round">Leer Más</a> </div>
+                            <div class="ftr text-center"> <a href="../blog/#arte" class="btn btn-white btn-round">Leer Más</a> </div>
                         </div>
                     </div>
                 </div>
