--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,7 +27,7 @@
             <div id="triadtext" class="col-xl-6 col-lg-6 col-md-7 col-sm-12 col-12 ">
                 <h2 class="triadtext">¡Deléitate con la comodidad de recibir tus sabores favoritos a la puerta de tu casa!</h2>
                 <p class="triadtext">Como el servicio líder de delivery de comida en Bogotá, nos enorgullece llevar tus platos favoritos directamente a tu puerta. Con nuestra amplia red de restaurantes asociados, puedes explorar una variedad de cocinas, desde exquisitas opciones locales hasta platos internacionales de renombre.</p>
-                <button type="button" class="btn btn-primary btn-sm">¡Ir a los restaurantes!  </button>
+                <a href="../products" button type="button" class="btn btn-primary btn-sm">¡Ir a los restaurantes!  </a>
             </div>
         </div>
     </div>
