nav de la pagina y mejoras en el login y creacion de usuario

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,74 +1,17 @@
-<!-- <img class="wave" src="">
-	<div class="container">
-		<div class="img">
-			<img src="">
-		</div>
-		<div class="login-content">
-			<form action="index.html">
-				<img src="img/avatar.svg">
-				<h2 class="title">Welcome</h2>
-           		<div class="input-div one">
-           		   <div class="i">
-           		   		<i class="fas fa-user"></i>
-           		   </div>
-           		   <div class="div">
-           		   		<h5>Username</h5>
-           		   		<input type="text" class="input">
-           		   </div>
-           		</div>
-           		<div class="input-div pass">
-           		   <div class="i"> 
-           		    	<i class="fas fa-lock"></i>
-           		   </div>
-           		   <div class="div">
-           		    	<h5>Password</h5>
-           		    	<input type="password" class="input">
-            	   </div>
-            	</div>
-            	<a href="#">Forgot Password?</a>
-            	<input type="submit" class="btn" value="Login"> 
-                <button type="button" class="btn btn-outline-danger" >Danger</button>
-            </form>
+   <div class="row">
+        <div id="triadpic" class="col-xl-6 col-lg-6 col-md-5 col-sm-12 col-12">
+            <img class="triadpicture" src="assets/home/triadpic.png" alt="Triad" height="400px" width="450px">
         </div>
-    </div> -->
-    <!-- <div class="login-box">
-        <div class="login-header">
-            <header><img src="../imagenes/logo.jpg" alt=""></header>
-        </div>
-        <div class="input-box">
-            <input type="text" class="input-field" placeholder="Email"  required>
-        </div>
-        <div class="input-box">
-            <input type="password" class="input-field" placeholder="Password" required>
-        </div>
-        <div class="forgot">
-            <section>
-                <input type="checkbox" id="check">
-                <label for="check">Remember me</label>
-            </section>
-            <section>
-                <a href="#">Forgot password</a>
-            </section>
-        </div>
-        <div class="input-submit">
-            <button class="submit-btn" id="submit"></button>
-            <label for="submit">Sign In</label>
-        </div>
-        <div class="sign-up-link">
-            <p>Don't have account? <a href="#">Sign Up</a></p>
-        </div>
-    </div> -->
-    <div class="header">
+        
+    <div class="container">
         <div class="logo">
-            <a href="#">
-                <img src="assets/img/netflixlogo.png" alt="">
-            </a>
+            <a href="../">
+                <img class="logofooter" href="../" src="assets/footer/logopnG.png" alt="logo"></a> 
         </div>
-    </div>
+    
 
     <div class="login-container">
         <div class="login_box">
-            <h2 class="titulo">Drop Door </h2>
         <div class="imputs"> 
             <form>
                 <form class="form">
@@ -92,17 +35,24 @@
         </div>
             <div class="demas">
                 <div class="creacion">
-                    <p> <a href="#">crear cuenta</a></p>
-                <!-- </div>
-                <p>-------------------O-------------------</p>
+                     <a href="create">Crear cuenta</a>
+                 </div>
+               <hr class="lineaS">
                 <div class="login_footer">
                 <div class="login_facebook">
-                    <span><img height="20px" src="" alt="facebook"></span>
-                    <span><a href="#">Conectar com Facebook</a></span>
-                </div> -->
+                    <a href=""><img height="40px" src="assets/user/buscar.png" alt="facebook"></a>
+                </div> 
+                <div class="login_google">
+                    <a href=""><img height="40px" src="assets/user/facebook (2).png" alt="facebook"></a>
+                    
+                </div>
             </div> 
             </div>
 
-          
+        </div>
         </div>
     </div>
+</div>
+    
+
+    <app-footer></app-footer>
