--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,32 @@
-<p>header works!</p>
+div
+<nav class="navbar bg-body-tertiary fixed-top">
+    <div class="container-fluid">
+        <div class="logo">
+            <img src="assets/footer/logopnG.png" alt="Logo de la marca" height="50px" >
+        </div>
+        <div class="acordeon">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel" >Menu</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"><p class="textNav">Products</p></a>
+            </li>
+            <hr>
+            <li class="nav-item">
+        
+                <a class="nav-link active" aria-current="page" href="#"><p class="textNav">abouts</p></a>
+            </li>
+           
+          </ul>
+        </div>
+      </div>
+    </div>
+</div>
+  </nav>
