--- a/src/app/pages/createaccount/createaccount.component.html
+++ b/src/app/pages/createaccount/createaccount.component.html
@@ -1,1 +1,72 @@
-<p>createaccount works!</p>
+<div class="row">
+    <div id="triadpic" class="col-xl-6 col-lg-6 col-md-5 col-sm-12 col-12">
+        <img class="triadpicture" src="assets/home/triadpic.png" alt="Triad" height="400px" width="450px">
+    </div>
+    
+<div class="container">
+    <div class="logo">
+        <a href="../">
+            <img class="logofooter" href="../" src="assets/footer/logopnG.png" alt="logo"></a> 
+    </div>
+
+
+<div class="login-container">
+    <div class="login_box">
+    <div class="imputs"> 
+        <form>
+            <form class="form">
+                <input type="text" required>
+                <label class="lbl-nombre">
+                    <span class="text-nomb">Usuario</span>
+                </label>
+                
+            </form>
+            <form class="form">
+                <input type="text" required>
+                <label class="lbl-nombre">
+                    <span class="text-nomb">Password</span>
+                </label>
+                
+            </form>
+            <form class="form">
+                <input type="text" required>
+                <label class="lbl-nombre">
+                    <span class="text-nomb">Email</span>
+                </label>
+                
+            </form>
+            <form class="form">
+                <input type="text" required>
+                <label class="lbl-nombre">
+                    <span class="text-nomb">Numero de celular</span>
+                </label>
+                
+            </form>
+
+
+            <input type="submit" class="btn" value="Create">
+        </form>
+    </div>
+        <div class="demas">
+            <div class="creacion">
+                <p> <a href="login">Ya estoy registrado</a></p>
+             </div>
+           <hr class="lineaS">
+            <div class="login_footer">
+            <div class="login_facebook">
+                <span><img height="40px" src="assets/user/buscar.png" alt="facebook"></span>
+            </div> 
+            <div class="login_google">
+                <span><img height="40px" src="assets/user/facebook (2).png" alt="facebook"></span>
+                
+            </div>
+        </div> 
+        </div>
+
+    </div>
+    </div>
+</div>
+</div>
+
+
+<app-footer></app-footer>
