--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,11 @@
-div
+
 <nav class="navbar bg-body-tertiary fixed-top">
     <div class="container-fluid">
         <div class="logo">
-            <img src="assets/footer/logopnG.png" alt="Logo de la marca" height="50px" >
+          <a href=''><img src="assets/footer/logopnG.png" alt="Logo de la marca" height="50px"></a> 
+        </div>
+        <div class="avatardiv">
+          <a href='login'><img src="assets/login/avatar-removebg-preview.png" alt="Logo de la marca" height="50px" class="avatar" ></a> 
         </div>
         <div class="acordeon">
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -16,12 +19,16 @@ div
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"><p class="textNav">Products</p></a>
+              <a class="nav-link active" aria-current="page" href=""><p class="textNav">Home</p></a>
+              <a class="nav-link active" aria-current="page" href="profile"><p class="textNav">Mi Perfil</p></a>
             </li>
             <hr>
             <li class="nav-item">
         
-                <a class="nav-link active" aria-current="page" href="#"><p class="textNav">abouts</p></a>
+                <a class="nav-link active" aria-current="page" href="products"><p class="textNav">Comprar</p></a>
+                <a class="nav-link active" aria-current="page" href="blog"><p class="textNav">The Blog!</p></a>
+                <a class="nav-link active" aria-current="page" href="aboutus"><p class="textNav">Acerca de Nosotros</p></a>
+                <a class="nav-link active" aria-current="page" href="checkout"><p class="textNav">Pagos</p></a>
             </li>
            
           </ul>
