--- a/src/app/pages/blogs/blogs.component.html
+++ b/src/app/pages/blogs/blogs.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="blogbanner">
+<div class="blogbanner m-5 p-5">
   <h1 class="bannertext">The Blog!</h1>
 </div>
 
