--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -2,37 +2,20 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+
     font-family: 'Open Sans', sans-serif;
 }
-body{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #d338ac;
-}
 
 
-.login-container{
-
-    display: flex; 
-    justify-content: center;
-    /* background-color: aqua; */
-
-
-}
 .form{
-    width: 100%;
+    width: min-content;
     height: 50px;
-    max-width: 400px;
     position: relative;
     overflow: hidden;
 }
 .form input{
-    width: 100%;
-    height: 100%;
+    
+    
     background: none;
     color: #d338ac;
     padding-top: 20px;
@@ -81,22 +64,23 @@ body{
     }
     
 .imputs{
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 .btn{
+    margin-top: 3rem;
 	display: block;
-	width: 300px;
-	height: 50px;
+	width: 150px;
+	height: 40px;
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #5f1649, #d338ac, #ae32be);
+	background-image: linear-gradient(to right, #FF63AB, #d338ac, #ae32be);
 	background-size: 200%;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	color: #fff;
 	font-family: 'Poppins', sans-serif;
 	text-transform: uppercase;
-	margin: 1rem 0;
+	margin-left: 70px;
 	cursor: pointer;
 	transition: .5s;
 }
@@ -106,35 +90,23 @@ body{
 
 .demas{
     margin-top: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-left: 100px;
+    
 }
 .container {
-	width: 500px;
-    height: 500px;
-	margin:7% auto;
+	
+	
 	border-radius: 25px;
 	background-color: rgba(0,0,0,0.1);
 	box-shadow: 0 0 17px #333;
 }
 
-.logo{
-    display: flex;
-    justify-content:center ;
-    
-
-}
 .row{
-    
-    margin: 0px 300px 0px 300px;
     display: flex;
-    flex-direction: row;
+    flex-wrap: nowrap;
     
 }
-#triadpic{
-    margin:7% auto;
-}
+
 
 .lineaS{
     border: #d91d1d;
@@ -146,4 +118,15 @@ body{
     flex-direction: row;
     gap: 2rem;
     margin-top: 1.5rem;
+}
+
+.logofooter {
+    width: 200px;
+    margin-left: 48px;
+}
+
+.triadgif{
+    margin-left: 100px;
+    height: 500px;
+    width: 500px;
 }
