--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,58 +1,76 @@
-   <div class="row">
-        <div id="triadpic" class="col-xl-6 col-lg-6 col-md-5 col-sm-12 col-12">
-            <img class="triadpicture" src="assets/home/triadpic.png" alt="Triad" height="400px" width="450px">
-        </div>
-        
-    <div class="container">
-        <div class="logo">
-            <a href="../">
-                <img class="logofooter" href="../" src="assets/footer/logopnG.png" alt="logo"></a> 
-        </div>
-    
-
-    <div class="login-container">
-        <div class="login_box">
-        <div class="imputs"> 
-            <form>
-                <form class="form">
-                    <input type="text" required>
-                    <label class="lbl-nombre">
-                        <span class="text-nomb">Email</span>
-                    </label>
-                    
-                </form>
-                <form class="form">
-                    <input type="text" required>
-                    <label class="lbl-nombre">
-                        <span class="text-nomb">Password</span>
-                    </label>
-                    
-                </form>
-
-
-                <input type="submit" class="btn" value="Login">
-            </form>
-        </div>
-            <div class="demas">
-                <div class="creacion">
-                     <a href="create">Crear cuenta</a>
-                 </div>
-               <hr class="lineaS">
-                <div class="login_footer">
-                <div class="login_facebook">
-                    <a href=""><img height="40px" src="assets/user/buscar.png" alt="facebook"></a>
-                </div> 
-                <div class="login_google">
-                    <a href=""><img height="40px" src="assets/user/facebook (2).png" alt="facebook"></a>
-                    
-                </div>
-            </div> 
-            </div>
-
-        </div>
-        </div>
+<div class="row">
+  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 p-5" >
+    <div class="contents">
+      <img
+        class="triadgif"
+        src="assets/login/login.gif"
+        alt="Triad"
+        height="400px"
+        width="450px"
+      />
     </div>
-</div>
-    
+  </div>
 
-    <app-footer></app-footer>
+  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 p-5">
+    <div class="contents2">
+      <div class="logo">
+        <a href="../">
+          <img
+            class="logofooter"
+            href="../"
+            src="assets/login/iconoylogo.png"
+            alt="logo"
+        /></a>
+      </div>
+
+      <div class="login-container">
+        <div class="login_box">
+          <div class="imputs">
+            <form>
+              <form class="form ml-5 mb-3">
+                <input type="text" required />
+                <label class="lbl-nombre">
+                  <span class="text-nomb">Email</span>
+                </label>
+              </form>
+              <form class="form ml-5 mb-3">
+                <input type="text" required />
+                <label class="lbl-nombre">
+                  <span class="text-nomb">Password</span>
+                </label>
+              </form>
+
+              <input type="submit" class="btn" value="Login" />
+            </form>
+          </div>
+          <div class="demas">
+            <div class="creacion">
+              <a href="create" class="text-decoration-none text-muted">Crear cuenta</a>
+            </div>
+            <hr class="lineaS" />
+            <div class="login_footer">
+              <div class="login_facebook">
+                <a href=""
+                  ><img
+                    height="40px"
+                    src="assets/user/buscar.png"
+                    alt="facebook"
+                /></a>
+              </div>
+              <div class="login_google">
+                <a href=""
+                  ><img
+                    height="40px"
+                    src="assets/user/facebook (2).png"
+                    alt="facebook"
+                /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<app-footer></app-footer>
