--- a/src/app/pages/aboutus/aboutus.component.html
+++ b/src/app/pages/aboutus/aboutus.component.html
@@ -1,1 +1,14 @@
-<p>aboutus works!</p>
+<div class="delivery-total">
+    <img src="" alt="">
+      <h2 class="delivery-title">¡Acerca de nosotros!</h2>
+    <p class="delivery-content">
+      Con una rutina cada vez más ocupada, a veces hay poco tiempo para pensar en el menú de la semana o el plato del día.     ¡Drop Door reúne los mejores restaurantes de tu ciudad! Encuentra desde platos rápidos hasta alternativas saludables.
+      Recibe tu pedido rápidamente y ten la seguridad de nuestra garantía de calidad en la entrega.
+  
+    </p>
+    <div>
+      <img class="img-center"
+        src="https://editorialtelevisa.brightspotcdn.com/wp-content/uploads/2020/08/comida-arabe.jpg"
+        style="width: 100%; text-align:center">
+    </div>
+  </div>
