Cambios en Aboutus y Products

--- a/src/app/pages/aboutus/aboutus.component.html
+++ b/src/app/pages/aboutus/aboutus.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="delivery-total">
     <img src="" alt="">
       <h2 class="delivery-title">¡Acerca de nosotros!</h2>
@@ -8,7 +10,9 @@
     </p>
     <div>
       <img class="img-center"
-        src="https://editorialtelevisa.brightspotcdn.com/wp-content/uploads/2020/08/comida-arabe.jpg"
+        src="assets/aboutus/comida.jpg"
         style="width: 100%; text-align:center">
     </div>
   </div>
+
+  <app-footer></app-footer>
