--- a/src/app/pages/aboutus/aboutus.component.css
+++ b/src/app/pages/aboutus/aboutus.component.css
@@ -1,6 +1,6 @@
 /* Estilos para el contenedor principal */
 .delivery-total {
-    font-family: 'Anton', sans-serif;
+    font-family:  Arial, Helvetica, sans-serif ;
     text-align: center;
     max-width: 600px;
     margin: 0 auto;
@@ -8,11 +8,12 @@
     background-size: cover;
     background-position: center;
     border-radius: 50px;
-    box-shadow: 0 2px 4px #FF63AB;
+    box-shadow: 0 30px 30px #a86484;
 }
 
 /* Estilos para el encabezado */
 .delivery-title {
+    font-family:  cooper black ;
     font-size: 3rem;
     font-weight: bold;
     margin-bottom: 10px;
