--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -15,13 +15,16 @@
     <div class="row">
       <div class="col-md-4" *ngFor="let product of products">
         <div class="card">
-          <img class="card-img-top" src="assets/products/{{product.image}}" alt="{{product.name}}" >
-          <div class="card-body">
+          <a [href]="product.url" target="_blank">
+             <img class="card-img-top" src="assets/products/{{product.image}}" alt="{{product.name}}" >
+            </a>      
+             <div class="card-body">
             <h5 class="card-title">{{product.name}}</h5>
-            <!-- Agrega más detalles del producto según tus necesidades -->
           </div>
         </div>
       </div>
     </div>
     
+
+
     <app-footer></app-footer>
